# country-counter

./: .gitignore  .pre-commit-config.yaml  AI_PROMPTS.md  COUNTER_PROMPTS.md  GENERATE_MAPS_PROMPTS.md  PLOT_PROMPTS.md  README.md  count_visited_countries.py  pyproject.toml
.github/: CODEOWNERS
scripts/: count_countries.py  count_visited_countries.py  generate_maps.py  plot_countries.py
